src/main/java/com/example/Structural/Bridge/good/SquareShape.java
package com.example.Structural.Bridge.good;

import com.example.Structural.Bridge.bad.Shape;

public abstract class SquareShape  extends AbstractShape {

}
