src/main/java/com/example/Structural/Bridge/bad/BlueCircleShape.java
package com.example.Structural.Bridge.bad;

public class BlueCircleShape implements Shape{
    @Override
    public String getShape() {
        return "This is a Blue colored circular shape!";
    }
}
